# cookiecutter-pypackage

./: CHANGELOG.md  CONTRIBUTING.rst  LICENSE  README.rst  cookiecutter.json  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
tests/: test_bake_project.py
{{cookiecutter.repo_name}}/: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  cli.py
